2009-02-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fix for multithreaded build (make -j <n>).
	* Fixed recently introduced compilation issue in GCC 4.0.

2009-02-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed recent ES performance hit when toggling frames display.
	* Fixed condition check for shape right-click in ES.
	* Fixed hash_utils.h once and for all, and added proper check in configure.ac.

2009-02-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed several bugs from the tracker: #1559936, #1851478, #2121276, #2127362,
	  #2127508, #2122907, #2454975
	* Modified a few constants to be less dependant on the tile size being 8px.
	* Foes struck by magebane will seek a new weapon after being hit if they
	  lost their spells.
	* Prevent stats from being set outside the [0, 60] range by the cheat screen;
	  HPs are the sole exception, being settable in the [-50, 60] range.
	* Added FoV and SS to the list of games that do not change the screen size
	  when started from the commandline.
	* Applied part of patch #2348451, and a modified patch #2371363.
	* Eliminated more GCC 4.3.x compilation warnings.
	* Fixed goblin spawns in Fawn Tower. Contrary to popular opinion, it has
	  nothing at all to do with pikemen in the area or finishing off the goblins
	  in the area: monster eggs in SI simply do not seem to hatch in SI if the
	  egg's Z-coordinate differs by more than 4 units from the avatar's when the
	  egg is cached in. Also, extended jukebox egg behavior to other sound eggs.

2009-02-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* UCC: Added optional 'void' keyword to specify an usecode function without
	  returns (and warnings for missing that keyword). Improved handling of UCC
	  structs, and allowed them as function arguments and returns; fixed bug
	  with class member struct variables. Made #include directive include a file
	  only once, like PHP's #include_once.